# LLMs-and-Multi-Agent-Orchestration---Assignment7

./: .coveragerc  .env.example  .gitignore  ASSIGNMENT_SPECIFICATION.md  CONTRIBUTING.md  GENERAL_PROJECT_REQUIREMENTS.md  LICENSE  PROJECT_COMPLETION_SUMMARY.md  PROJECT_REQUIREMENTS.md  README.md  START_HERE.md  analysis_utils.py  analyze_jsonrpc.py  analyze_results.py  create_visualizations.py  pyproject.toml  requirements.txt  run_api.py  run_gui.py  run_league.py  run_tournament.py  setup.py  tournament_utils.py  visualization_utils.py
.claude/: INDEX.md  settings.local.json
.claude/agents/: code-reviewer.md  fullstack-developer.md  qa-expert.md  ui-designer.md
.claude/commands/: check_coverage.md  run_tests.md
.claude/skills/: protocol_validation.md  test_generation.md
.github/workflows/: tests.yml
.streamlit/: config.toml
SHARED/: __init__.py  agent_constants.py  constants.py  protocol_constants.py  protocol_fields.py  protocol_network.py  protocol_types.py
SHARED/config/: __init__.py  system.json
SHARED/contracts/: __init__.py  base_contract.py  exceptions.py  game_flow_contracts.py  jsonrpc_helpers.py  (+13 more)
agents/: __init__.py  generic_player.py  generic_referee.py  launch_player_01.py  launch_player_02.py  launch_player_03.py  launch_player_04.py  launch_player_timeout.py  launch_referee_01.py  launch_referee_02.py  player_handlers.py  player_message_handlers.py  player_strategies.py  referee_choices.py  referee_comm.py  referee_game_logic.py  referee_http_handlers.py  referee_invite.py  referee_match_runner.py  referee_match_state.py
api/: __init__.py  main.py
doc/: AGENT_STRATEGY.md  API.md  ARCHITECTURE.md  BUILDING_BLOCKS.md  CHANGELOG.md  CODE_QUALITY_REPORT.md  COMPLIANCE_REPORT.md  COVERAGE_REPORT.md  CURRENT_STATUS.md  DESIGN_DOCUMENT.md  EDGE_CASES.md  FINAL_REFACTORING_SUMMARY.md  FINAL_STATUS_REPORT.md  GUI_IMPLEMENTATION_GUIDE.md  GUI_QUICK_START.md  HARDCODED_STRINGS_FIX_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  INDEX.md  INSTALLATION.md  ISO_25010_COMPLIANCE.md  LINE_COUNT_FIXES_COMPLETED.md  MATHEMATICAL_FOUNDATIONS.md  NEXT_STEPS.md  PERFORMANCE_PROFILING.md  PHASE2_VERIFICATION.md  PHASES_13-16_STATUS.md  PHASES_15_16_COMPLETION_SUMMARY.md  PHASE_14_COMPLETION_SUMMARY.md  PHASE_15_COMPLETION_SUMMARY.md  PRD.md  PROJECT_REPORT.md  QUICK_REFERENCE.md  REFACTORING_COMPLETE.md  REFERENCES.md  RESEARCH.md  RESULTS.md  RUNNING.md  SECURITY.md  STATISTICAL_ANALYSIS.md  (+7 more)
gui/: __init__.py  api_client.py  app.py  config.py
notebooks/: comprehensive_analysis.ipynb
test_logs/: test.log.jsonl  tournament_report_20251220_140820.json  tournament_report_20251220_141620.json  tournament_report_20251220_142342.json  tournament_report_20251220_142631.json
tests/: README.md  conftest.py  test_agents.py  test_agents_registration.py  test_agents_timeout.py  test_circuit_breaker.py  test_config_loader.py  test_contracts_league_lifecycle.py  test_contracts_league_manager.py  test_contracts_lm_control.py  test_contracts_lm_reg.py  test_contracts_player.py  test_contracts_player_join.py  test_contracts_player_parity.py  test_contracts_player_tracking.py  test_contracts_ref_errors.py  test_contracts_ref_game_over.py  test_contracts_referee.py  test_contracts_referee_invitations.py  test_cov_base_contract.py  test_cov_exceptions.py  test_cov_game_result.py  test_cov_jsonrpc.py  test_cov_proto_const.py  test_cov_ref_game.py  test_cov_registration.py  test_cov_round.py  test_cov_standings.py  test_cov_strategies.py  test_cov_validators.py  test_e2e_tournament.py  test_e2e_tournament_run.py  test_e2e_tournament_validation.py  test_edge_cases_game.py  test_edge_cases_timeout.py  test_edge_cases_validation.py  test_game_logic.py  test_integration.py  test_integration_data.py  test_integration_data_matches.py  (+41 more)
(+175 files in other folders)
